[package]
name = "upserter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
rand = "0.8.5"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
